Fix spacing

--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ a:hover {
 }
 
 #menu {
-  margin: 40px;
+  margin: 30px;
   margin-right: 60px;
   width: 200px;
   float: right;
@@ -89,15 +89,15 @@ a:hover {
 }
 
 
-@media (max-width: 1200px) { /*choose the width you prefer*/
+@media (max-width: 1250px) { /*choose the width you prefer*/
   #menu {
     float: left;
     margin-top: 5px;
-    margin-left: 50px;
+    margin-left: 30px;
   }
 
   .content {
-    max-width: 1100px;
+    max-width: 800px;
     margin-left: 30px;
     margin-right: 30px;
   }
